--- a/designs/main.ui
+++ b/designs/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1020</width>
-    <height>731</height>
+    <height>710</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,7 +72,7 @@
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="statsButton">
       <property name="geometry">
        <rect>
         <x>260</x>
@@ -211,6 +211,9 @@
         <pointsize>16</pointsize>
        </font>
       </property>
+      <property name="value">
+       <number>4</number>
+      </property>
      </widget>
      <widget class="QLabel" name="label_6">
       <property name="geometry">
@@ -260,6 +263,47 @@
       </property>
       <property name="text">
        <string>Готово</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="typeLearn">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>350</y>
+        <width>201</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="editable">
+       <bool>false</bool>
+      </property>
+      <item>
+       <property name="text">
+        <string>Устный</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Письменный</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>330</y>
+        <width>201</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Режим заучивания</string>
       </property>
      </widget>
     </widget>
