--- a/designs/learn.ui
+++ b/designs/learn.ui
@@ -211,9 +211,9 @@
     <widget class="QLabel" name="result">
      <property name="geometry">
       <rect>
-       <x>250</x>
+       <x>190</x>
        <y>140</y>
-       <width>351</width>
+       <width>471</width>
        <height>241</height>
       </rect>
      </property>
@@ -227,6 +227,42 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="again">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>460</y>
+       <width>211</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>24</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Ещё раз</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="next">
+     <property name="geometry">
+      <rect>
+       <x>640</x>
+       <y>460</y>
+       <width>201</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>24</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Дальше</string>
      </property>
     </widget>
    </widget>
